-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.5.0
-
3
-
9458
The value of trusted.link should change as hard links are added to files.
# llmount.sh # cd /mnt/lustre # touch f0 # getfattr -n trusted.link f0 # file: f0 trusted.link=0s3/HqEQEAAAAsAAAAAAAAAAAAAAAAAAAAABQAAAACAAAABwAAAAEAAAAAZjA= # getfattr -n trusted.link f0 | md5sum f0ea62a3d3c5efd8329b1147bf97ce7b - # ln f0 f1 # getfattr -n trusted.link f0 | md5sum f0ea62a3d3c5efd8329b1147bf97ce7b - # sys_lea f0 [0x200000007:0x1:0x0] 'f0'
Before extended attribute caching landed the trusted.link attribute is updated and the interpreting the link EA has the expected result:
# cd /mnt/lustre # touch f0 # getfattr -n trusted.link f0 # file: f0 trusted.link=0s3/HqEQEAAAAsAAAAAAAAAAAAAAAAAAAAABQAAAACAAAABwAAAAEAAAAAZjA= # getfattr -n trusted.link f0 | md5sum f0ea62a3d3c5efd8329b1147bf97ce7b - # ln f0 f1 # getfattr -n trusted.link f0 | md5sum 53753efeb8ce17a87df257ee317c7b68 - # sys_lea f0 [0x200000007:0x1:0x0] 'f0' [0x200000007:0x1:0x0] 'f1'
The lov xattrs appear to be immune to this issue since they are handled by special cases in ll_
{get,set}xattr() but I did not verify this in all cases. Some other attributes (trusted.hsm) which are modified outside of the normal MDS_SETXATTR path are also affected.
- is related to
-
LU-2869 extended attribute cache for Lustre
-
- Resolved
-