LU-3670 mdt: cancel MDS_INODELOCK_XATTR on MDS updates

In some cases, MDS updates extended attributes
on its own rather than on a client request.
MDS_INODELOCK_XATTR should be taken for this purpose.

Signed-off-by: Andrew Perepechko <andrew_perepechko@xyratex.com>
Change-Id: I8d5e947cc05ce5f25c8f128b01ab7458636b55ba
Reviewed-on: http://review.whamcloud.com/7186
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>