lustre/mdt/mdt_hsm.c
@@ -235,8 +235,8 @@ int mdt_hsm_state_set(struct mdt_thread_info *info)
 
 	lh = &info->mti_lh[MDT_LH_CHILD];
 	mdt_lock_reg_init(lh, LCK_PW);
-	rc = mdt_object_lock(info, obj, lh, MDS_INODELOCK_LOOKUP,
-			     MDT_LOCAL_LOCK);
+	rc = mdt_object_lock(info, obj, lh, MDS_INODELOCK_LOOKUP |
+			     MDS_INODELOCK_XATTR, MDT_LOCAL_LOCK);
 	if (rc)
 		RETURN(rc);
 
